force-app/main/default/objects/Merchant_Account__c/Merchant_Account__c.object-meta.xml
<CustomObject>
    <description>Merchant Account Object</description>
    <label>Merchant Account</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>LeadId</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merchant Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>