force-app/main/default/objects/Merchant_Account__c/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <description>Picklist to state Account Status</description>
    <inlineHelpText>Picklist to state Account Status</inlineHelpText>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paid in full</fullName>
            </value>
            <value>
                <fullName>Settled in full</fullName>
            </value>
            <value>
                <fullName>Weekly Payment Arrangement</fullName>
            </value>
            <value>
                <fullName>Daily Payment Arrangement</fullName>
            </value>
            <value>
                <fullName>Monthly Payment Arrangement</fullName>
            </value>
            <value>
                <fullName>All Actions complete</fullName>
            </value>
            <value>
                <fullName>Written Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>