force-app/main/default/objects/Merchant_Account__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>BorrowerAddress1</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>BorrowerAddress1</inlineHelpText>
    <label>Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>