force-app/main/default/objects/Merchant_Account__c/fields/Advance__c.field-meta.xml
<CustomField>
    <fullName>Advance__c</fullName>
    <description>Original Loan Amount</description>
    <inlineHelpText>Original Loan Amount</inlineHelpText>
    <label>Advance</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>