force-app/main/default/objects/Merchant_Account__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Borrower City</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Borrower City</inlineHelpText>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>