force-app/main/default/objects/Merchant_Account__c/fields/Collective_Cash_Collection_USD__c.field-meta.xml
<CustomField>
    <fullName>Collective_Cash_Collection_USD__c</fullName>
    <description>Total sums collected on account</description>
    <inlineHelpText>Total sums collected on account</inlineHelpText>
    <label>Collective Cash Collection USD</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>