force-app/main/default/objects/Merchant_Account__c/fields/Collective_Cash_Collections_CAD__c.field-meta.xml
<CustomField>
    <fullName>Collective_Cash_Collections_CAD__c</fullName>
    <description>Total sums collected on account in Canadian dollars</description>
    <inlineHelpText>Total sums collected on account in Canadian dollars</inlineHelpText>
    <label>Collective Cash Collections CAD</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>