force-app/main/default/objects/Merchant_Account__c/fields/Company_Cell_Phone__c.field-meta.xml
<CustomField>
    <fullName>Company_Cell_Phone__c</fullName>
    <description>Company Mobile / Cell Phone</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Company Mobile / Cell Phone</inlineHelpText>
    <label>Company Cell Phone</label>
    <type>Phone</type>
</CustomField>