force-app/main/default/objects/Merchant_Account__c/fields/Company_Primary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Company_Primary_Phone__c</fullName>
    <description>Company Phone</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Company Phone</inlineHelpText>
    <label>Company Primary Phone</label>
    <type>Phone</type>
</CustomField>