force-app/main/default/objects/Merchant_Account__c/fields/Contractual_Payment__c.field-meta.xml
<CustomField>
    <fullName>Contractual_Payment__c</fullName>
    <description>Contractual amount of payment</description>
    <inlineHelpText>Contractual amount of payment</inlineHelpText>
    <label>Contractual Payment</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>