force-app/main/default/objects/Merchant_Account__c/fields/Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score__c</fullName>
    <description>FICO credit score</description>
    <inlineHelpText>FICO credit score</inlineHelpText>
    <label>Credit Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>