force-app/main/default/objects/Merchant_Account__c/fields/Current_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_Balance__c</fullName>
    <defaultValue>0</defaultValue>
    <description>current balance (advance amount minus payments)</description>
    <inlineHelpText>current balance (advance amount minus payments)</inlineHelpText>
    <label>Current Balance</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>