force-app/main/default/objects/Merchant_Account__c/fields/Current_Balance_When_Payments_Loaded__c.field-meta.xml
<CustomField>
    <fullName>Current_Balance_When_Payments_Loaded__c</fullName>
    <label>Current Balance When Payments Loaded</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>