force-app/main/default/objects/Merchant_Account__c/fields/Date_when_payments_loaded__c.field-meta.xml
<CustomField>
    <fullName>Date_when_payments_loaded__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date when payments loaded</label>
    <type>Date</type>
</CustomField>