force-app/main/default/objects/Merchant_Account__c/fields/DateOfBirth__c.field-meta.xml
<CustomField>
    <fullName>DateOfBirth__c</fullName>
    <description>Borrower DOB</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Borrower DOB</inlineHelpText>
    <label>DateOfBirth</label>
    <type>Date</type>
</CustomField>