force-app/main/default/objects/Merchant_Account__c/fields/Days_Delinquent__c.field-meta.xml
<CustomField>
    <fullName>Days_Delinquent__c</fullName>
    <description>Current number of working days past due</description>
    <formula>(5 * ( FLOOR( ( TODAY() - DATE( 1900, 1, 8) ) / 7 ) )
+
MIN( 5, MOD( TODAY() - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( Last_Payment_Date__c - DATE( 1900, 1, 8) ) / 7))
+
MIN( 5, MOD( Last_Payment_Date__c - DATE( 1900, 1, 8), 7 ) ) )
-
IF(AND(Last_Payment_Date__c &lt; DATEVALUE(&apos;2020-01-01&apos;),
today() &gt; DATEVALUE(&quot;2020-01-01&quot;)),1,0)
-
IF(AND(Last_Payment_Date__c &lt; DATEVALUE(&quot;2020-02-17&quot;),
today() &gt; DATEVALUE(&quot;2020-02-17&quot;)),1,0)
-
IF(AND(Last_Payment_Date__c &lt; DATEVALUE(&quot;2020-04-10&quot;),
today() &gt; DATEVALUE(&quot;2020-04-10&quot;)),1,0)
-
IF(AND(Last_Payment_Date__c &lt; DATEVALUE(&quot;2020-05-18&quot;),
today() &gt; DATEVALUE(&quot;2020-05-18&quot;)),1,0)
-
IF(AND(Last_Payment_Date__c &lt; DATEVALUE(&quot;2020-07-01&quot;),
today() &gt; DATEVALUE(&quot;2020-07-01&quot;)),1,0)
-
IF(AND(Last_Payment_Date__c &lt; DATEVALUE(&quot;2020-08-03&quot;),
today() &gt; DATEVALUE(&quot;2020-08-03&quot;)),1,0)
-
IF(AND(Last_Payment_Date__c &lt; DATEVALUE(&quot;2020-09-07&quot;),
today() &gt; DATEVALUE(&quot;2020-09-07&quot;)),1,0)
-
IF(AND(Last_Payment_Date__c &lt; DATEVALUE(&quot;2020-10-12&quot;),
today() &gt; DATEVALUE(&quot;2020-10-12&quot;)),1,0)
-
IF(AND(Last_Payment_Date__c &lt; DATEVALUE(&quot;2020-11-11&quot;),
today() &gt; DATEVALUE(&quot;2020-11-11&quot;)),1,0)
-
IF(AND(Last_Payment_Date__c &lt; DATEVALUE(&quot;2020-12-25&quot;),
today() &gt; DATEVALUE(&quot;2020-12-25&quot;)),1,0)
-
IF(AND(Last_Payment_Date__c &lt; DATEVALUE(&quot;2020-12-28&quot;),
today() &gt; DATEVALUE(&quot;2020-12-28&quot;)),1,0)
-
IF(AND(Last_Payment_Date__c &lt; DATEVALUE(&quot;2021-01-01&quot;),
today() &gt; DATEVALUE(&quot;2021-01-01&quot;)),1,0)
-
IF(AND(Last_Payment_Date__c &lt; DATEVALUE(&quot;2021-02-15&quot;),
today() &gt; DATEVALUE(&quot;2021-02-15&quot;)),1,0)
-
IF(AND(Last_Payment_Date__c &lt; DATEVALUE(&quot;2021-04-02&quot;),
today() &gt; DATEVALUE(&quot;2021-04-02&quot;)),1,0)
-
IF(AND(Last_Payment_Date__c &lt; DATEVALUE(&quot;2021-04-05&quot;),
today() &gt; DATEVALUE(&quot;2021-04-05&quot;)),1,0)
-
IF(AND(Last_Payment_Date__c &lt; DATEVALUE(&quot;2021-05-24&quot;),
today() &gt; DATEVALUE(&quot;2021-05-24&quot;)),1,0)
-
IF(AND(Last_Payment_Date__c &lt; DATEVALUE(&quot;2021-07-01&quot;),
today() &gt; DATEVALUE(&quot;2021-07-01&quot;)),1,0)
-
IF(AND(Last_Payment_Date__c &lt; DATEVALUE(&quot;2021-08-02&quot;),
today() &gt; DATEVALUE(&quot;2021-08-02&quot;)),1,0)
-
IF(AND(Last_Payment_Date__c &lt; DATEVALUE(&quot;2021-09-06&quot;),
today() &gt; DATEVALUE(&quot;2021-09-06&quot;)),1,0)
-
IF(AND(Last_Payment_Date__c &lt; DATEVALUE(&quot;2021-10-11&quot;),
today() &gt; DATEVALUE(&quot;2021-10-11&quot;)),1,0)
-
IF(AND(Last_Payment_Date__c &lt; DATEVALUE(&quot;2021-11-11&quot;),
today() &gt; DATEVALUE(&quot;2021-11-11&quot;)),1,0)
-
IF(AND(Last_Payment_Date__c &lt; DATEVALUE(&quot;2021-12-27&quot;),
today() &gt; DATEVALUE(&quot;2021-12-27&quot;)),1,0)
-
IF(AND(Last_Payment_Date__c &lt; DATEVALUE(&quot;2021-12-28&quot;),
today() &gt; DATEVALUE(&quot;2021-12-28&quot;)),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Current number of working days past due</inlineHelpText>
    <label>Days Delinquent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>