force-app/main/default/objects/Merchant_Account__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Borrower Email Address</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Borrower Email Address</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>