force-app/main/default/objects/Merchant_Account__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <description>Lending Entity</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Lending Entity</inlineHelpText>
    <label>Entity</label>
    <length>25</length>
    <type>Text</type>
</CustomField>