force-app/main/default/objects/Merchant_Account__c/fields/Ever_Modified__c.field-meta.xml
<CustomField>
    <fullName>Ever_Modified__c</fullName>
    <description>Has the account ever had a temporary modification Y / N</description>
    <inlineHelpText>Has the account ever had a temporary modification Y / N</inlineHelpText>
    <label>Ever Modified?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>