force-app/main/default/objects/Merchant_Account__c/fields/Factor_Rate__c.field-meta.xml
<CustomField>
    <fullName>Factor_Rate__c</fullName>
    <description>Factor Rate</description>
    <inlineHelpText>Factor Rate</inlineHelpText>
    <label>Factor Rate</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>