force-app/main/default/objects/Merchant_Account__c/fields/Holdback__c.field-meta.xml
<CustomField>
    <fullName>Holdback__c</fullName>
    <description>% split held back from Card payments for MCA accounts</description>
    <inlineHelpText>% split held back from Card payments for MCA accounts</inlineHelpText>
    <label>Holdback %</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>