force-app/main/default/objects/Merchant_Account__c/fields/Insolvency__c.field-meta.xml
<CustomField>
    <fullName>Insolvency__c</fullName>
    <description>Is the loan insolvent Y/ N</description>
    <inlineHelpText>Is the loan insolvent Y/ N</inlineHelpText>
    <label>Insolvency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>