force-app/main/default/objects/Merchant_Account__c/fields/Last_Pay_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_Pay_Amount__c</fullName>
    <description>Last Payment Amount</description>
    <inlineHelpText>Last Payment Amount</inlineHelpText>
    <label>Last Pay Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>