force-app/main/default/objects/Merchant_Account__c/fields/Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Date__c</fullName>
    <description>Last Payment Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Last Payment Date</inlineHelpText>
    <label>LastPayDate</label>
    <type>Date</type>
</CustomField>