force-app/main/default/objects/Merchant_Account__c/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <description>Legal entity type</description>
    <inlineHelpText>Legal entity type</inlineHelpText>
    <label>Legal Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sole Proprietorship</fullName>
            </value>
            <value>
                <fullName>S Corporation</fullName>
            </value>
            <value>
                <fullName>C Corporation</fullName>
            </value>
            <value>
                <fullName>LLP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>