force-app/main/default/objects/Merchant_Account__c/fields/LoanTerm__c.field-meta.xml
<CustomField>
    <fullName>LoanTerm__c</fullName>
    <description>Loan Term</description>
    <inlineHelpText>Loan Term</inlineHelpText>
    <label>LoanTerm</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>