force-app/main/default/objects/Merchant_Account__c/fields/Max_Days_Delinquent__c.field-meta.xml
<CustomField>
    <fullName>Max_Days_Delinquent__c</fullName>
    <description>Highest number working days past due ever</description>
    <inlineHelpText>Highest number working days past due ever</inlineHelpText>
    <label>Max Days Delinquent</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>