force-app/main/default/objects/Merchant_Account__c/fields/Merchant__c.field-meta.xml
<CustomField>
    <fullName>Merchant__c</fullName>
    <description>Merchant this product is related to</description>
    <inlineHelpText>Merchant this product is related to</inlineHelpText>
    <label>Merchant</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Merchant_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>