force-app/main/default/objects/Merchant_Account__c/fields/Mod_Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>Mod_Begin_Date__c</fullName>
    <description>Date current temporary payment modification began</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date current temporary payment modification began</inlineHelpText>
    <label>Mod Begin Date</label>
    <type>Date</type>
</CustomField>