force-app/main/default/objects/Merchant_Account__c/fields/Mod_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Mod_End_Date__c</fullName>
    <description>Date current temporary payment modification finishes</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date current temporary payment modification finishes</inlineHelpText>
    <label>Mod End Date</label>
    <type>Date</type>
</CustomField>