force-app/main/default/objects/Merchant_Account__c/fields/Mod_Status__c.field-meta.xml
<CustomField>
    <fullName>Mod_Status__c</fullName>
    <description>No Mod, Ended, Current</description>
    <inlineHelpText>No Mod, Ended, Current</inlineHelpText>
    <label>Mod Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Mod</fullName>
            </value>
            <value>
                <fullName>Ended</fullName>
            </value>
            <value>
                <fullName>Current</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>