force-app/main/default/objects/Merchant_Account__c/fields/Modified__c.field-meta.xml
<CustomField>
    <fullName>Modified__c</fullName>
    <description>Modification payment as % of contractual payment</description>
    <inlineHelpText>Modification payment as % of contractual payment</inlineHelpText>
    <label>Modified %</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>