force-app/main/default/objects/Merchant_Account__c/fields/Modified_Payment__c.field-meta.xml
<CustomField>
    <fullName>Modified_Payment__c</fullName>
    <description>Modified payment amount USD</description>
    <inlineHelpText>Modified payment amount USD</inlineHelpText>
    <label>Modified Payment</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>