force-app/main/default/objects/Merchant_Account__c/fields/Modified_Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Modified_Payment_Frequency__c</fullName>
    <description>Daily, Weekly</description>
    <inlineHelpText>Daily, Weekly</inlineHelpText>
    <label>Modified Payment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>