force-app/main/default/objects/Merchant_Account__c/fields/Naics_Code__c.field-meta.xml
<CustomField>
    <fullName>Naics_Code__c</fullName>
    <description>Naics code</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Naics code</inlineHelpText>
    <label>naics_code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>