force-app/main/default/objects/Merchant_Account__c/fields/Naics_Desc__c.field-meta.xml
<CustomField>
    <fullName>Naics_Desc__c</fullName>
    <description>Naics description</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Naics description</inlineHelpText>
    <label>naics_desc</label>
    <length>100</length>
    <type>Text</type>
</CustomField>