force-app/main/default/objects/Merchant_Account__c/fields/Officer_Cell_Number__c.field-meta.xml
<CustomField>
    <fullName>Officer_Cell_Number__c</fullName>
    <description>Borrower Mobile Phone</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Borrower Mobile Phone</inlineHelpText>
    <label>Officer Cell Number</label>
    <type>Phone</type>
</CustomField>