force-app/main/default/objects/Merchant_Account__c/fields/Officer_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Officer_First_Name__c</fullName>
    <description>Borrower First Name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Borrower First Name</inlineHelpText>
    <label>Officer First Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>