force-app/main/default/objects/Merchant_Account__c/fields/Officer_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Officer_Last_Name__c</fullName>
    <description>Borrower Last Name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Borrower Last Name</inlineHelpText>
    <label>Officer Last Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>