force-app/main/default/objects/Merchant_Account__c/fields/Officer_Primary_Number__c.field-meta.xml
<CustomField>
    <fullName>Officer_Primary_Number__c</fullName>
    <description>Borrower Home Phone</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Borrower Home Phone</inlineHelpText>
    <label>Officer Primary Number</label>
    <type>Phone</type>
</CustomField>