force-app/main/default/objects/Merchant_Account__c/fields/Origination_Date__c.field-meta.xml
<CustomField>
    <fullName>Origination_Date__c</fullName>
    <description>Date account was originated</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date account was originated</inlineHelpText>
    <label>OriginationDate</label>
    <type>Date</type>
</CustomField>