force-app/main/default/objects/Merchant_Account__c/fields/Paid_in_full__c.field-meta.xml
<CustomField>
    <fullName>Paid_in_full__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Account with Current Balance 0</description>
    <inlineHelpText>Account with Current Balance 0</inlineHelpText>
    <label>Paid in full</label>
    <type>Checkbox</type>
</CustomField>