force-app/main/default/objects/Merchant_Account__c/fields/Pay_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Pay_Frequency__c</fullName>
    <description>Contractual Payment Frequency</description>
    <inlineHelpText>Contractual Payment Frequency</inlineHelpText>
    <label>PayFrequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>