force-app/main/default/objects/Merchant_Account__c/fields/Pay_Post_Write_Off__c.field-meta.xml
<CustomField>
    <fullName>Pay_Post_Write_Off__c</fullName>
    <description>Total payment received post charge off</description>
    <inlineHelpText>Total payment received post charge off</inlineHelpText>
    <label>Pay Post Write Off</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>