force-app/main/default/objects/Merchant_Account__c/fields/Payback__c.field-meta.xml
<CustomField>
    <fullName>Payback__c</fullName>
    <description>Amount to be paid back, including principal, interest and fees</description>
    <inlineHelpText>Amount to be paid back, including principal, interest and fees</inlineHelpText>
    <label>Payback</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>