force-app/main/default/objects/Merchant_Account__c/fields/Payback_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Payback_Calculated__c</fullName>
    <description>Total of Current Balance and Collective Cash Collections CAD</description>
    <formula>Current_Balance__c + Collective_Cash_Collections_CAD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total of Current Balance and Collective Cash Collections CAD</inlineHelpText>
    <label>Payback Calculated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>