force-app/main/default/objects/Merchant_Account__c/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <description>MCA, Term Loan, Canadian</description>
    <inlineHelpText>MCA, Term Loan, Canadian</inlineHelpText>
    <label>Portfolio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MCA</fullName>
            </value>
            <value>
                <fullName>Term Loan</fullName>
            </value>
            <value>
                <fullName>Canadian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>