force-app/main/default/objects/Merchant_Account__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>Borrower Postal Code</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Borrower Postal Code</inlineHelpText>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>