force-app/main/default/objects/Merchant_Account__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <description>Borrower Province</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Borrower Province</inlineHelpText>
    <label>Province</label>
    <length>25</length>
    <type>Text</type>
</CustomField>