force-app/main/default/objects/Merchant_Account__c/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <description>Borrower SSN</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Borrower SSN</inlineHelpText>
    <label>SSN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>