force-app/main/default/objects/Merchant_Account__c/fields/Syndicated_Perc__c.field-meta.xml
<CustomField>
    <fullName>Syndicated_Perc__c</fullName>
    <description>Syndicated Perc</description>
    <inlineHelpText>Syndicated Perc</inlineHelpText>
    <label>Syndicated Perc</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>