force-app/main/default/objects/Merchant_Account__c/fields/UCC__c.field-meta.xml
<CustomField>
    <fullName>UCC__c</fullName>
    <description>Uniform Commercial Code filings that are used by lenders to announce their rights to collateral or liens on secured loans</description>
    <inlineHelpText>Uniform Commercial Code filings that are used by lenders to announce their rights to collateral or liens on secured loans</inlineHelpText>
    <label>UCC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>