force-app/main/default/objects/Merchant_Account__c/fields/WO_Less_Recoveries__c.field-meta.xml
<CustomField>
    <fullName>WO_Less_Recoveries__c</fullName>
    <description>Charge-off balance less any recoveries received after the charge-off event</description>
    <inlineHelpText>Charge-off balance less any recoveries received after the charge-off event</inlineHelpText>
    <label>WO Less Recoveries</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>