force-app/main/default/objects/Merchant_Account__c/fields/Write_Off_Balance__c.field-meta.xml
<CustomField>
    <fullName>Write_Off_Balance__c</fullName>
    <description>Balance that was charged off</description>
    <inlineHelpText>Balance that was charged off</inlineHelpText>
    <label>Write Off Balance</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>