force-app/main/default/objects/Merchant_Account__c/fields/Write_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Write_Off_Date__c</fullName>
    <description>Date of Charge off</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date of Charge off</inlineHelpText>
    <label>Write Off Date</label>
    <type>Date</type>
</CustomField>