force-app/main/default/objects/Merchant_Account__c/fields/Written_Off_Account__c.field-meta.xml
<CustomField>
    <fullName>Written_Off_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Written Off Account</description>
    <inlineHelpText>Written Off Account</inlineHelpText>
    <label>Written Off Account</label>
    <type>Checkbox</type>
</CustomField>