force-app/main/default/objects/Merchant_Account__c/listViews/All_Merchant_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Merchant_Accounts</fullName>
    <columns>NAME</columns>
    <columns>Merchant__c</columns>
    <columns>Account_Status__c</columns>
    <columns>Email__c</columns>
    <columns>Advance__c</columns>
    <columns>Current_Balance__c</columns>
    <columns>Last_Payment_Date__c</columns>
    <columns>Last_Pay_Amount__c</columns>
    <columns>Days_Delinquent__c</columns>
    <columns>Max_Days_Delinquent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Merchant Accounts</label>
    <sharedTo>
        <group>Merchant_Access</group>
    </sharedTo>
</ListView>