force-app/main/default/objects/Merchant_Account__c/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <columns>NAME</columns>
    <columns>Merchant__c</columns>
    <columns>Written_Off_Account__c</columns>
    <columns>Email__c</columns>
    <columns>Advance__c</columns>
    <columns>Current_Balance__c</columns>
    <columns>Last_Payment_Date__c</columns>
    <columns>Last_Pay_Amount__c</columns>
    <columns>Days_Delinquent__c</columns>
    <columns>Max_Days_Delinquent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created Today</label>
    <sharedTo>
        <group>Merchant_Access</group>
    </sharedTo>
</ListView>