force-app/main/default/objects/Merchant_Account__c/listViews/MCA_Payment_YESTERDAY.listView-meta.xml
<ListView>
    <fullName>MCA_Payment_YESTERDAY</fullName>
    <columns>NAME</columns>
    <columns>Merchant__c</columns>
    <columns>Last_Pay_Amount__c</columns>
    <columns>Last_Payment_Date__c</columns>
    <columns>Province__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Last_Payment_Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:2</value>
    </filters>
    <label>MCA Payment last 2 Days</label>
    <sharedTo>
        <group>Merchant_Access</group>
    </sharedTo>
</ListView>